@@ -2,19 +2,18 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI="5"
-PYTHON_COMPAT=( python{2_7,3_4} )
+EAPI=5
+PYTHON_COMPAT=( python2_7 )
 
 inherit distutils-r1
 
 DESCRIPTION="Secure Remote Password"
 HOMEPAGE="http://code.google.com/p/pysrp/"
-SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${PN}-${PV}.tar.gz"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
 IUSE=""
+KEYWORDS="~amd64 ~x86"
+LICENSE=BSD
+SLOT=0
+SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${PN}-${PV}.tar.gz"
 
 RDEPEND=""
 DEPEND="${RDEPEND}"
