@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Dec 2014; Harold Naparst <harold@alum.mit.edu> srp-1.0.5.ebuild,
+  metadata.xml:
+  add python and proxy-maint herds. Put tags in lex order.
+
 *srp-1.0.5 (02 Dec 2014)
 
   02 Dec 2014; Harold Naparst <harold@alum.mit.edu> +srp-1.0.5.ebuild,
